--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,10 @@
 
     <TextView
         android:id="@+id/greetingText"
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-
-        />
+        android:layout_centerInParent="true"
+        android:background="@drawable/backgroud"
+        android:text="Hello World!" />
 
 </RelativeLayout>
