--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="cyan">#00BCD4</color>
+    <color name="green">#4CAF50</color>
+    <color name="blue">#3F51B5</color>
 </resources>
