--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="cyan">#00BCD4</color>
     <color name="green">#4CAF50</color>
     <color name="blue">#3F51B5</color>
+    <color name="orange">#F47836</color>
 </resources>
