--- a/app/src/main/res/layout/activity_grid_view.xml
+++ b/app/src/main/res/layout/activity_grid_view.xml
@@ -27,10 +27,10 @@
         android:layout_below="@id/toolbar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-
         android:layout_alignParentBottom="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
@@ -38,6 +38,8 @@
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/orange"
         android:src="@drawable/baseline_check_24"
-/>
+        android:tint="@android:color/white"
+        />
+
 
 </RelativeLayout>
